[gd_scene load_steps=3 format=3 uid="uid://dhmoafwinjqsc"]

[ext_resource type="Script" path="res://obstaculo/obstaculo.gd" id="1_0qsoo"]
[ext_resource type="Texture2D" uid="uid://s8vi0jujdgaj" path="res://Textures/nube_sprite.png" id="2_x1tv3"]

[node name="obstaculo" type="Area2D" groups=["damageable"]]
z_index = 50
script = ExtResource("1_0qsoo")
minRotationRate = 0.0
maxRotationRate = 0.0
scoreValue = 2.0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 50
texture = ExtResource("2_x1tv3")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(15, -55, -44, -42, -68, -6, -55, 28, -21, 28, 15, 55, 68, 33, 60, -17)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.500006, -0.500002)
scale = Vector2(6.85, 5.65)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
